{{$NEXT}}

2.042     2015-07-08 14:43:31+02:00 Europe/Prague

Drivers:
* LA::Itconll

Fixes:
* Fixed bug in get_ufeatures(): Foreign=Foreign (was mistakenly Foreign=Yes).
* Removed the FeatureStructure::is_valid() method. It is not needed since 2.019
  when we disallowed setting unknown features or values.



2.041     2015-02-27 16:07:10+01:00 Europe/Prague

Drivers:
* ZH::Conll



2.040     2015-02-26 13:44:07+01:00 Europe/Prague

Drivers:
* TR::Conll



2.039     2015-02-24 15:54:15+01:00 Europe/Prague

Drivers:
* TA::Tamiltb
* TE::Conll
* UR::Conll



2.038     2015-02-23 08:06:54+01:00 Europe/Prague

Drivers:
* RO::Rdt
* RU::Syntagrus
* SK::Snk
* SL::Conll



2.037     2015-02-20 17:39:15+01:00 Europe/Prague

Drivers:
* PT::Conll



2.036     2015-02-13 12:42:55+01:00 Europe/Prague

Drivers:
* PL::Ipipan



2.035     2015-02-11 12:23:30+01:00 Europe/Prague

Drivers:
* NO::Conll
* NL::Cgn: added the old tag for adverbs, BW() (besides the new tag, BIJW()).



2.034     2015-02-10 22:27:41+01:00 Europe/Prague

Interface:
* FeatureStructure has new methods is_interrogative() and is_relative().

Features:
* New value 'dim' of the feature 'degree': diminutive. Applicable to multiple languages, systematically needed in Dutch.
* New feature 'position' for the position (usage) of Dutch adjectives.

Drivers:
* Fixed NL::Cgn. Extended list of tags; encoding now includes features.



2.033     2015-02-08 00:02:03+01:00 Europe/Prague

Interface:
* New class Lingua::Interset::Converter implements conversion between two physical tagsets including caching.

Drivers:
* NL::Conll
* NL::Cgn



2.032     2015-01-26 23:27:27+01:00 Europe/Prague

Interface:
* Fixed alphabetical ordering in FeatureStructure->get_ufeatures().

Drivers:
* Fixed MUL::Uposf. Decoding was incorrect for features that are named differently in UD and in Interset.
* SV::Mamba
* SV::Conll
* SV::Parole
* SV::Suc



2.031     2015-01-24 12:35:52+01:00 Europe/Prague

Interface: